--- a/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
@@ -290,50 +290,111 @@ $$
 
 ### 5.1.LJSpeech: High-quality Single Speaker Dataset with 22,050 Hz
 
-> We conducted an objective evaluation to compare the performance of the single-speaker dataset. We utilized the official implementation and checkpoints of HiFi-GAN, PriorGrad, and FreGrad, which have the same Mel-spectrogram configuration. Table \ref{table1:LJSpeech} shows that our model achieved a significantly improved performance in all objective metrics without M-STFT. It is worth noting that our model can achieve a better performance than diffusion baselines even with unprecedented small training steps of 0.05M while other models should be trained over 1M steps. Additionally, GAN-based models take much more time to train the model due to the discriminators. Furthermore, our proposed methods require smaller sampling steps than diffusion-based models. We observed that diffusion-based model and flow matching-based models could not model the high-frequency information because their objective function does not guarantee the high-frequency information while GAN-based models utilize Mel-spectrogram loss and M-STFT-based discriminators. To reduce this issue, we utilize multi-band modeling and FreeU operation, and the results also show improved performance in most metrics.
+> We conducted an objective evaluation to compare the performance of the single-speaker dataset. 
+> We utilized the official implementation and checkpoints of HiFi-GAN, PriorGrad, and FreGrad, which have the same Mel-spectrogram configuration. 
+> Table \ref{table1:LJSpeech} shows that our model achieved a significantly improved performance in all objective metrics without M-STFT. 
+> It is worth noting that our model can achieve a better performance than diffusion baselines even with unprecedented small training steps of 0.05M while other models should be trained over 1M steps. 
+> Additionally, GAN-based models take much more time to train the model due to the discriminators. 
+> Furthermore, our proposed methods require smaller sampling steps than diffusion-based models. 
+> We observed that diffusion-based model and flow matching-based models could not model the high-frequency information because their objective function does not guarantee the high-frequency information while GAN-based models utilize Mel-spectrogram loss and M-STFT-based discriminators. 
+> To reduce this issue, we utilize multi-band modeling and FreeU operation, and the results also show improved performance in most metrics.
 
 ### 5.2.LibriTTS: Multi-speaker Dataset with 24,000 Hz
 
-> We conducted objective and subjective evaluations to compare the performance of the multi-speaker dataset. We utilized the publicly available checkpoints of UnivNet, BigVGAN, and Vocos, which are trained with the LibriTTS dataset. Table \ref{table2:LibriTTS} shows our model significantly improved performance in all metrics but the M-STFT metric. Although other GAN-based models utilize Mel-spectrogram distance loss and multi-resolution spectrogram discriminators which can minimize the distance on the spectral domain, we only trained the model by minimizing the distance of the vector field on the waveform. However, our model achieved better performance in subjective evaluation. Specifically, our models have better performance on the periodicity metrics, and this means that our period-aware structure could improve the performance in terms of pitch and periodicity by significantly reducing the jitter sound. Both PeriodWave-MB and PeriodWave demonstrated significantly lower pitch error distances compared to BigVGAN. Specifically, PeriodWave-MB and PeriodWave (FreeU) achieved a pitch error distance of 16.829 and 18.730 (17.398), respectively, while BigVGAN's pitch error distance was 25.651. Table \ref{Table:trainingsteps} also demonstrated the fast training speed of PeriodWave. The model trained for 0.15M steps could achieve comparable performance compared to baseline models which are trained over 1M steps.
+> We conducted objective and subjective evaluations to compare the performance of the multi-speaker dataset. 
+> We utilized the publicly available checkpoints of UnivNet, BigVGAN, and Vocos, which are trained with the LibriTTS dataset. 
+> Table \ref{table2:LibriTTS} shows our model significantly improved performance in all metrics but the M-STFT metric. 
+> Although other GAN-based models utilize Mel-spectrogram distance loss and multi-resolution spectrogram discriminators which can minimize the distance on the spectral domain, we only trained the model by minimizing the distance of the vector field on the waveform. 
+> However, our model achieved better performance in subjective evaluation. 
+> Specifically, our models have better performance on the periodicity metrics, and this means that our period-aware structure could improve the performance in terms of pitch and periodicity by significantly reducing the jitter sound. 
+> Both PeriodWave-MB and PeriodWave demonstrated significantly lower pitch error distances compared to BigVGAN. 
+> Specifically, PeriodWave-MB and PeriodWave (FreeU) achieved a pitch error distance of 16.829 and 18.730 (17.398), respectively, while BigVGAN's pitch error distance was 25.651. 
+> Table \ref{Table:trainingsteps} also demonstrated the fast training speed of PeriodWave. 
+> The model trained for 0.15M steps could achieve comparable performance compared to baseline models which are trained over 1M steps.
 
 ### 5.3.Sampling Robustness, Diversity, and Controllability
 
-> We utilize a flow matching model for PeriodWave, allowing it to generate diverse samples with different Gaussian noise. However, our goal is a conditional generation using the Mel-spectrogram. We need to decrease the diversity to improve the robustness of the model. To achieve this, we can multiply the small scale of temperature $\tau$ to the Gaussian noise during inference. Table \ref{Table:Temperature} shows that using $\tau$ of 0.667 could improve the performance. We also observed that samples generated with a $\tau$ of 1.0 contain a small amount of white noise, which decreases perceptual quality despite having the lowest lowest M-STFT metrics. Furthermore, we could control the energy for each band by using different scales of $\tau$. This approach could be utilized for a neural EQ that can generate the signal by reflecting the conditioned energy, not merely manipulating the energy of the generated samples.    
+> We utilize a flow matching model for PeriodWave, allowing it to generate diverse samples with different Gaussian noise. 
+> However, our goal is a conditional generation using the Mel-spectrogram. 
+> We need to decrease the diversity to improve the robustness of the model. 
+> To achieve this, we can multiply the small scale of temperature $\tau$ to the Gaussian noise during inference. 
+> Table \ref{Table:Temperature} shows that using $\tau$ of 0.667 could improve the performance. 
+> We also observed that samples generated with a $\tau$ of 1.0 contain a small amount of white noise, which decreases perceptual quality despite having the lowest lowest M-STFT metrics. 
+> Furthermore, we could control the energy for each band by using different scales of $\tau$. 
+> This approach could be utilized for a neural EQ that can generate the signal by reflecting the conditioned energy, not merely manipulating the energy of the generated samples.    
 
 ### 5.4.MUSDB18-HQ: Multi-track Music Audio Dataset for Out-Of-Distribution Robustness
 
-> To evaluate the robustness on the out-of-distribution samples, we measure performance on the MUSDB18-HQ dataset that consists of multi-track music audio including vocals, drums, bass, others, and a mixture. We utilize all test samples including 50 songs with 5 tracks, and randomly sample the 10-second segments for each sample. Table \ref{table4:oodobjective} shows our model has better performance on all metrics without M-STFT. Table \ref{Table5:OODSMOS} shows that PeriodWave-MB outperformed the baseline models by improving the out-of-distribution robustness. Specifically, we significantly improve the performance of bass, the frequency range of which is known between 40 to 400 Hz. Additionally, we observed that our model significantly reduces the jitter sound in the out-of-distribution samples.  
+> To evaluate the robustness on the out-of-distribution samples, we measure performance on the MUSDB18-HQ dataset that consists of multi-track music audio including vocals, drums, bass, others, and a mixture. 
+> We utilize all test samples including 50 songs with 5 tracks, and randomly sample the 10-second segments for each sample. 
+> Table \ref{table4:oodobjective} shows our model has better performance on all metrics without M-STFT. 
+> Table \ref{Table5:OODSMOS} shows that PeriodWave-MB outperformed the baseline models by improving the out-of-distribution robustness. 
+> Specifically, we significantly improve the performance of bass, the frequency range of which is known between 40 to 400 Hz. 
+> Additionally, we observed that our model significantly reduces the jitter sound in the out-of-distribution samples.  
 
 ### 5.5.Analysis on Adaptive Sampling Steps for Multi-Band Models
 
-> We proposed an adaptive sampling for multi-band models. We can efficiently reduce the sampling steps for high-frequency bands due to the hierarchical band modeling conditioned on the previously generated DWT components. Table \ref{Table:AdaptiveSampling} shows that it is important to model the first DWT components. After sampling the first band, we can significantly reduce the sampling steps for the remaining bands, maintaining the performance with only a small decrease. The results from the sampling steps of [4,4,8,16] demonstrated that it is important to model the first band for high-fidelity waveform generation and accurate high-frequency modeling could improve the M-STFT metrics.
+> We proposed an adaptive sampling for multi-band models. 
+> We can efficiently reduce the sampling steps for high-frequency bands due to the hierarchical band modeling conditioned on the previously generated DWT components. 
+> Table \ref{Table:AdaptiveSampling} shows that it is important to model the first DWT components. 
+> After sampling the first band, we can significantly reduce the sampling steps for the remaining bands, maintaining the performance with only a small decrease. 
+> The results from the sampling steps of [4,4,8,16] demonstrated that it is important to model the first band for high-fidelity waveform generation and accurate high-frequency modeling could improve the M-STFT metrics.
 
 ### 5.6.Ablation Study
 
 #### Different Periods
 
-> We conduct ablation study for different periods at the same structure. Table \ref{table:ablation} shows that the model with a period of 1 shows the lowest performance. Increasing the number of periods could improve the entire performance in terms of most metrics, consistently. However, this also improves the computational cost and requires more training steps for optimizing various periods in a single estimator so we fix the model with the period of [1,2,3,5,7]. Meanwhile, we compared the model with periods of [1,2,4,6,8] and [1,2,4,8,16] to demonstrate the effectiveness of the prime number for the period. We observed that using prime number could improve the UTMOS slightly and the model with periods of [1,2,4,6,8] and [1,2,4,8,16] also have comparable performance, which can reflect the different period representations of the waveform. We thought that the model with periods of [1,2,3,5,7,11,13,17] requires more training steps. This also demonstrates that our new waveform generator structure is suitable for waveform generation. Additionally, our structure could be simply adapted for any structure such as WaveNet and UNet-based models.
+> We conduct ablation study for different periods at the same structure. 
+> Table \ref{table:ablation} shows that the model with a period of 1 shows the lowest performance. 
+> Increasing the number of periods could improve the entire performance in terms of most metrics, consistently. 
+> However, this also improves the computational cost and requires more training steps for optimizing various periods in a single estimator so we fix the model with the period of [1,2,3,5,7]. 
+> Meanwhile, we compared the model with periods of [1,2,4,6,8] and [1,2,4,8,16] to demonstrate the effectiveness of the prime number for the period. 
+> We observed that using prime number could improve the UTMOS slightly and the model with periods of [1,2,4,6,8] and [1,2,4,8,16] also have comparable performance, which can reflect the different period representations of the waveform. 
+> We thought that the model with periods of [1,2,3,5,7,11,13,17] requires more training steps. 
+> This also demonstrates that our new waveform generator structure is suitable for waveform generation. 
+> Additionally, our structure could be simply adapted for any structure such as WaveNet and UNet-based models.
 
 #### Prior 
 
-> PriorGrad demonstrated that data-dependent prior information could improve the performance and sampling speed for diffusion models. We also utilize the normalized energy which can be extracted Mel-spectrogram as prior information. We observe that the data-dependent prior could improve the quality and sampling speed in flow matching based models. Meanwhile, although we failed to implement the quality reported by SpecGrad \citep{koizumi22_interspeech}, we see that the spectrogram-based prior could improve the performance rather than the energy-based prior. 
+> PriorGrad demonstrated that data-dependent prior information could improve the performance and sampling speed for diffusion models. 
+> We also utilize the normalized energy which can be extracted Mel-spectrogram as prior information. 
+> We observe that the data-dependent prior could improve the quality and sampling speed in flow matching based models. 
+> Meanwhile, although we failed to implement the quality reported by SpecGrad \citep{koizumi22_interspeech}, we see that the spectrogram-based prior could improve the performance rather than the energy-based prior. 
 
 #### Mel Encoder 
 
-> Our Mel encoder significantly improved the performance through efficient time-frequency modeling. This only requires a small increase in computation cost because we reused the extracted features which are fed to the period-aware flow matching estimator for each sampling step. 
+> Our Mel encoder significantly improved the performance through efficient time-frequency modeling. 
+> This only requires a small increase in computation cost because we reused the extracted features which are fed to the period-aware flow matching estimator for each sampling step. 
 
 #### Activation Function 
 
-> We observed that SiLU activation has better performance than ReLU or Leaky-ReLU in our preliminary study. Recently, the Snake activation function has been utilized for high-quality waveform generation. However, we failed to train the model with Snake activation, resulting from unstable training issues. Additionally, it increased the inference speed by 1.5$\times$. However, we observe that optimizing the model with the Snake activation function could improve the performance so we have a plan to optimize the model with the Snake activation function by decreasing the learning rate, combining Leaky-ReLU with Snake activation for enhanced robustness.   
+> We observed that SiLU activation has better performance than ReLU or Leaky-ReLU in our preliminary study. 
+> Recently, the Snake activation function has been utilized for high-quality waveform generation. 
+> However, we failed to train the model with Snake activation, resulting from unstable training issues. 
+> Additionally, it increased the inference speed by 1.5$\times$. 
+> However, we observe that optimizing the model with the Snake activation function could improve the performance so we have a plan to optimize the model with the Snake activation function by decreasing the learning rate, combining Leaky-ReLU with Snake activation for enhanced robustness.   
 \vspace{-0.2cm}
 
 ### 5.7.Single Speaker Text-to-Speech
 
-> We conduct two-stage TTS experiments to evaluate the robustness of the proposed models compared to previous GAN-based and diffusion-based models. We utilized the official implementation of Glow-TTS which is trained with the LJSpeech dataset. Table \ref{tts} demonstrated that our model has a higher performance on the two-stage TTS in terms of MOS and UTMOS. Although HiFi-GAN shows a lower performance in reconstruction metrics, we observed that HiFi-GAN shows a high perceptual performance in terms of UTMOS. BigVGAN-base (14M) has a higher performance than BigVGAN (112M). We see that BigVGAN could reconstruct the waveform signal from the generated Mel-spectrogram even with the error that might be in the generated Mel-spectrogram. Although our model has a higher reconstruction performance, our models could refine this phenomenon through iterative generative processes. Additionally, we found that the generated Mel-spectrogram contains a larger scale of energy compared to the ground-truth Mel-spectrogram, so we utilized $\tau$ of 0.333 for scaling $x_0$.
+> We conduct two-stage TTS experiments to evaluate the robustness of the proposed models compared to previous GAN-based and diffusion-based models. 
+> We utilized the official implementation of Glow-TTS which is trained with the LJSpeech dataset. 
+> Table \ref{tts} demonstrated that our model has a higher performance on the two-stage TTS in terms of MOS and UTMOS. 
+> Although HiFi-GAN shows a lower performance in reconstruction metrics, we observed that HiFi-GAN shows a high perceptual performance in terms of UTMOS. 
+> BigVGAN-base (14M) has a higher performance than BigVGAN (112M). 
+> We see that BigVGAN could reconstruct the waveform signal from the generated Mel-spectrogram even with the error that might be in the generated Mel-spectrogram. 
+> Although our model has a higher reconstruction performance, our models could refine this phenomenon through iterative generative processes. 
+> Additionally, we found that the generated Mel-spectrogram contains a larger scale of energy compared to the ground-truth Mel-spectrogram, so we utilized $\tau$ of 0.333 for scaling $x_0$.
 
 ### 5.8.Multi Speaker Text-to-Speech
 
-> We additionally conduct two-stage multi-speaker TTS experiments to further demonstrate the robustness of the proposed models compared to previous large-scale GAN-based models including BigVGAN and BigVSAN \citep{shibuya2024bigvsan}. Note that BigVGAN and BigVSAN were trained for 5M and 10M steps, respectively. We utilize ARDiT-TTS \citep{liu2024autoregressive} as zero-shot TTS model which was trained with LibriTTS dataset. We convert 500 samples of generated Mel-spectrogram into waveform signal by each model. The Table \ref{ardit-tts} shows that our model has better performance on the objective and subjective metrics in terms of UTMOS and MOS. Furthermore, Our model with FreeU has much better performance than others. We can discuss that FreeU could reduce the high-frequency noise resulting in better perceptual quality.
+> We additionally conduct two-stage multi-speaker TTS experiments to further demonstrate the robustness of the proposed models compared to previous large-scale GAN-based models including BigVGAN and BigVSAN \citep{shibuya2024bigvsan}. 
+> Note that BigVGAN and BigVSAN were trained for 5M and 10M steps, respectively. 
+> We utilize ARDiT-TTS \citep{liu2024autoregressive} as zero-shot TTS model which was trained with LibriTTS dataset. 
+> We convert 500 samples of generated Mel-spectrogram into waveform signal by each model. 
+> The Table \ref{ardit-tts} shows that our model has better performance on the objective and subjective metrics in terms of UTMOS and MOS. 
+> Furthermore, Our model with FreeU has much better performance than others. 
+> We can discuss that FreeU could reduce the high-frequency noise resulting in better perceptual quality.
 
 ## 6.Conclusions: 结论
 
