--- a/Models/Flow/2024.06.26_E2_TTS.md
+++ b/Models/Flow/2024.06.26_E2_TTS.md
@@ -19,7 +19,7 @@
   - 12 [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
   - 13 [Naoyuki Kanda](../../Authors/Naoyuki_Kanda.md)
 - 机构:
-  - [Microsoft](../../Institutions/Microsoft.md)
+  - [Microsoft](../../Institutions/USA-Microsoft.md)
 - 时间:
   - 预印时间: 2024.06.26 ArXiv v1
   - 更新笔记: 2024.07.05
