--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -10,7 +10,7 @@
   - 03 [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
   - 04 [Jaewoong Cho](../../Authors/Jaewoong_Cho.md)
 - 机构:
-  - [KRAFTON.AI](../../Institutions/KRAFTON.AI.md)
+  - [KRAFTON.AI](../../Institutions/KOR-KRAFTON.AI.md)
 - 时间:
   - 预印时间: 2024.06.17 ArXiv v1
   - 更新笔记: 2024.06.18
