--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -21,7 +21,7 @@
   - 14 [Zhijie Yan](../../Authors/Zhijie_Yan.md)
   - 15 [Shiliang Zhang](../../Authors/Shiliang_Zhang.md)
 - 机构:
-  - [阿里巴巴达摩院](../../Institutions/Alibaba.md)
+  - [阿里巴巴达摩院](../../Institutions/CHN-Alibaba.md)
 - 时间:
   - 预印时间: 2023.10.07 ArXiv v1
   - 预印时间: 2023.10.10 ArXiv v2
