--- a/Models/Singing_Voice/2024.06.12_TokSing.md
+++ b/Models/Singing_Voice/2024.06.12_TokSing.md
@@ -12,9 +12,9 @@
   - [Shan Yang](../../Authors/Shan_Yang.md)
   - [Qin Jin](../../Authors/Qin_Jin.md)
 - 机构:
-  - [中国人民大学](../../Institutions/RUC_中国人民大学.md)
-  - [腾讯 AI 实验室](../../Institutions/TecentAI.md)
-  - [CMU](../../Institutions/CMU_美国卡内基梅隆大学.md)
+  - [中国人民大学](../../Institutions/CHN-RUC_中国人民大学.md)
+  - [腾讯 AI 实验室](../../Institutions/CHN-TecentAI.md)
+  - [CMU](../../Institutions/USA-CMU_美国卡内基梅隆大学.md)
 - 时间:
   - 预印时间: 2024.06.12 ArXiv v1
   - 更新笔记: 2024.06.13
