--- a/Models/Diffusion/2024.06.04_SimpleSpeech.md
+++ b/Models/Diffusion/2024.06.04_SimpleSpeech.md
@@ -12,7 +12,7 @@
   - 05 [Xixin Wu](../../Authors/Xixin_Wu.md)
   - 06 [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
 - 机构:
-  - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
+  - [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md)
 - 时间:
   - 预印时间: 2024.06.04 ArXiv v1
   - 更新笔记: 2024.06.06
