--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -9,8 +9,8 @@
   - 02 [Jungil Kong](../../Authors/Jungil_Kong.md)
   - 03 [Juhee Son](../../Authors/Juhee_Son.md)
 - 机构:
-  - [Kakao Enterprise](../../Institutions/Kakao_Enterprise.md)
-  - [KAIST](../../Institutions/KAIST_韩国科学技术研究所.md)
+  - [Kakao Enterprise](../../Institutions/KOR-Kakao_Enterprise.md)
+  - [KAIST](../../Institutions/KOR-KAIST_韩国科学技术研究所.md)
 - 时间:
   - 预印时间: 2021.06.11 ArXiv v1
   - 更新笔记: 2024.06.06
