--- a/Models/Speech_LLM/2023.01.05_VALL-E.md
+++ b/Models/Speech_LLM/2023.01.05_VALL-E.md
@@ -19,7 +19,7 @@
   - 12 [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
   - 13 [Furu Wei](../../Authors/Furu_Wei_(韦福如).md)
 - 机构:
-  - [Microsoft](../../Institutions/Microsoft.md)
+  - [Microsoft](../../Institutions/USA-Microsoft.md)
 - 时间:
   - 预印时间: 2023.01.05 ArXiv v1
   - 更新笔记: 2024.06.20
