--- a/Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md
+++ b/Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md
@@ -13,8 +13,8 @@
   - 06 [Zhou Zhao](../../Authors/Zhou_Zhao_(赵洲).md)
   - 07 [Tie-Yan Liu](../../Authors/Tie-yan_Liu_(刘铁岩).md)
 - 机构:
-  - [浙江大学](../../Institutions/ZJU_浙江大学.md)
-  - [Microsoft](../../Institutions/Microsoft.md)
+  - [浙江大学](../../Institutions/CHN-ZJU_浙江大学.md)
+  - [Microsoft](../../Institutions/USA-Microsoft.md)
 - 时间:
   - 预印时间: 2020.06.08 ArXiv v1
   - 预印时间: 2020.06.09 ArXiv v2
