--- a/Models/Speech_Representaion/2021.06.14_HuBERT.md
+++ b/Models/Speech_Representaion/2021.06.14_HuBERT.md
@@ -12,8 +12,8 @@
   - 05 [Ruslan Salakhutdinov](../../Authors/Ruslan_Salakhutdinov.md)
   - 06 [Abdelrahman Mohamed](../../Authors/Abdelrahman_Mohamed.md)
 - 机构:
-  - [Meta AI](../../Institutions/Meta.AI.md)
-  - [卡内基梅隆大学](../../Institutions/CMU_美国卡内基梅隆大学.md)
+  - [Meta AI](../../Institutions/USA-Meta.AI.md)
+  - [卡内基梅隆大学](../../Institutions/USA-CMU_美国卡内基梅隆大学.md)
 - 时间:
   - 预印时间: 2021.06.14 ArXiv v1
   - 更新笔记: 2024.07.04
