--- a/Models/Speech_LLM/2024.01.14_ELLA-V.md
+++ b/Models/Speech_LLM/2024.01.14_ELLA-V.md
@@ -11,8 +11,8 @@
   - 04 [Ziyang Ma](../../Authors/Ziyang_Ma_(马子阳).md)
   - 05 [Chen Xie](../../Authors/Xie_Chen_(陈谐).md)
 - 机构:
-  - [上海交通大学](../../Institutions/SJTU_上海交通大学.md)
-  - [Microsoft](../../Institutions/Microsoft.md)
+  - [上海交通大学](../../Institutions/CHN-SJTU_上海交通大学.md)
+  - [Microsoft](../../Institutions/USA-Microsoft.md)
 - 时间:
   - 预印时间: 2024.01.14 ArXiv v1
   - 更新笔记: 2024.06.06
