--- a/Models/Speech_Neural_Codec/2022.10.24_EnCodec.md
+++ b/Models/Speech_Neural_Codec/2022.10.24_EnCodec.md
@@ -10,7 +10,7 @@
   - 03 [Gabriel Synnaeve](../../Authors/Gabriel_Synnaeve.md)
   - 04 [Yossi Adi](../../Authors/Yossi_Adi.md)
 - 机构:
-  - [Meta AI](../../Institutions/Meta.AI.md)
+  - [Meta AI](../../Institutions/USA-Meta.AI.md)
 - 时间:
   - 预印时间: 2022.10.24 ArXiv v1
   - 更新笔记: 2024.07.13
