--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -18,8 +18,8 @@
   - 11 [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
   - 12 [Furu Wei](../../Authors/Furu_Wei_(韦福如).md)
 - 机构:
-  - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
-  - [Microsoft](../../Institutions/Microsoft.md)
+  - [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md)
+  - [Microsoft](../../Institutions/USA-Microsoft.md)
 - 时间:
   - 预印时间: 2024.07.11 ArXiv v1
   - 更新笔记: 2024.07.12
