--- a/Models/Speech_LLM/2024.04.10_LLaMA-VITS.md
+++ b/Models/Speech_LLM/2024.04.10_LLaMA-VITS.md
@@ -8,8 +8,8 @@
   - 01 [Xincan Feng](../../Authors/Xincan_Feng.md) 
   - 02 [Akifumi Yoshimoto](../../Authors/Akifumi_Yoshimoto.md)
 - 机构:
-  - [奈良先端科学技术大学院大学](../../Institutions/NAIST_日本奈良先端科学技术大学院大学.md)
-  - [CyberAgent](../../Institutions/CyberAgent.md)
+  - [奈良先端科学技术大学院大学](../../Institutions/JPN-NAIST_日本奈良先端科学技术大学院大学.md)
+  - [CyberAgent](../../Institutions/JPN-CyberAgent.md)
 - 时间:
   - 预印时间: 2024.04.10 ArXiv v1
   - 预印时间: 2024.04.12 ArXiv v2
