--- a/Models/Speech_LLM/2024.03.25_VoiceCraft.md
+++ b/Models/Speech_LLM/2024.03.25_VoiceCraft.md
@@ -11,9 +11,9 @@
   - 04 [Abdelrahman Mohamed](../../Authors/Abdelrahman_Mohamed.md)
   - 05 [David Harwath](../../Authors/David_Harwath.md)
 - 机构:
-  - [德克萨斯大学奥斯汀分校](../../Institutions/UT_美国德克萨斯奥斯汀分校.md)
-  - [Meta.AI](../../Institutions/Meta.AI.md)
-  - [Rembrand](../../Institutions/Rembrand.md)
+  - [德克萨斯大学奥斯汀分校](../../Institutions/USA-UT_美国德克萨斯奥斯汀分校.md)
+  - [Meta.AI](../../Institutions/USA-Meta.AI.md)
+  - [Rembrand](../../Institutions/FRA-Rembrand.md)
 - 时间:
   - 预印时间: 2024.03.25 ArXiv v1
   - 预印时间: 2024.04.19 ArXiv v2
