--- a/Models/Speech_LLM/2024.01.25_VALL-T.md
+++ b/Models/Speech_LLM/2024.01.25_VALL-T.md
@@ -15,7 +15,7 @@
   - 08 [Xie Chen](../../Authors/Xie_Chen_(陈谐).md)
   - 09 [Kai Yu](../../Authors/Kai_Yu_(俞凯).md)
 - 机构:
-  - [上海交通大学](../../Institutions/SJTU_上海交通大学.md)
+  - [上海交通大学](../../Institutions/CHN-SJTU_上海交通大学.md)
 - 时间:
   - 预印时间: 2024.01.25 ArXiv v1
   - 预印时间: 2024.01.30 ArXiv v4
