--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -128,3 +128,10 @@
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+In this paper, we introduced the EELE method, using LoRA to enable neutral TTS models to generate emotional speech without requiring emotion-specific training. This plug-and-play solution proved effective, creating a flexible, scalable emotional TTS system. Evaluations confirmed its ability to enhance emotional expression, with applications in movies, games, and voice acting. The EELE method advances adaptable emotional TTS systems, contributing to AI-generated content, with future work focusing on refining LoRA integration and broadening emotional expression.
+
+在本文中，我们介绍了\textbf{\textit{EELE: Grant Synthetic Speech Emotions Using LoRA}}方法，该方法利用LoRA插件来赋予中性语音模型情感生成能力。我们的方法解决了传统情感TTS模型的局限性，即在初始训练期间需要情感类别信息，从而限制了它们的灵活性和可扩展性。通过利用LoRA，我们提供了一种新的解决方案，允许以即插即用的方式将情感能力添加到预先训练的中性TTS模型中。
+我们的实验证明了在模型内不同位置添加LoRA的效果，我们使用4种类别的情感语音数据训练了4套LoRA情感模块。这产生了一个高度灵活和可扩展的情绪TTS系统，该系统能够生成不同的情绪，而不需要从头开始重新训练整个模型。
+主观和客观评估证实了我们方法的优越性，突出了它通过提供一种具有成本效益和适应性的解决方案来彻底改变情感TTS领域的潜力。EELE方法不仅提高了合成语音的情感表现，而且在电影、游戏和配音等应用中具有重要的实用价值。
+总之，我们的工作为更灵活和可扩展的情感TTS系统铺平了道路，有助于人工智能生成内容的发展。未来的工作可能会探索LoRA集成的进一步优化，并扩大情感表达的范围，以增强TTS应用程序的多功能性。
