--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -147,6 +147,12 @@ VITS2模型在训练时用到了GAN的机制，由于判别器不参与推理过
 从这些模块的作用可以看出：文本编码器和投影层主要负责前端的建模，flow层和解码器负责后端的建模，时长预测器负责建模对齐信息。所以将LoRA添加到模型当中时主要分为这三个大类来设计。
 我们按照图\ref{all_try}的八种方式添加了LoRA，来探索情感是更适合建模在前端的文本特征中，还是更适合建模在后端的声学特征中。并且探索了时长对齐信息对情感表现的影响。
 
+### 3.2.How to add: Implantation of LORA in TTS model
+
+> In the VITS2 model \cite{kong2023vits2}, linear layers and 1D convolutional layers are primarily used. The LoRAlib package \cite{hu2022LoRA} conveniently includes methods for adding LoRA to these types of layers. After importing the package, we added low-rank matrices to each layer of the corresponding modules according to the eight different schemes, as illustrated in Figure \ref{LoRA}.
+
+VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAlib package \cite{hu2022LoRA}中正好内置了这些层添加LoRA的方式。我们导入包后按照8中方案分别为对应模块的每个层添加低秩矩阵，如图\ref{LoRA}所示。
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
