--- a/Models/E2E/2024.08.20_EELE.md
+++ b/Models/E2E/2024.08.20_EELE.md
@@ -195,6 +195,37 @@ VITS2 model \cite{kong2023vits2}中主要是线性层和一维卷积层，LoRAli
 其中$tts$是没有在任何位置添加LoRA插件，也没有进行任何微调，直接用训练好的中性语音模型合成音频的评测结果。
 通过表中结果可以发现，对于$angry$这种区别明显的情感往往有着高的判别比率。对于$surprise$这种较为偏中性的情感则人们很难感觉出来。其中$sad$和$happy$表现相对来说较为平均。其中$g$的表现力较为突出，我们推测情感信息是一种音频特征，因此交给模型的声学建模部分来学习相关知识能对情感有更好的建模能力，同时发音时间也影响着情感的表现力，人们往往将语速的快慢来作为判定情感类别的要素之一。
 
+### 5.2.Objective evaluation
+
+#### 5.2.1.Emotion Recognition Results
+
+> The results of the objective experiment are shown in Table \ref{Obj}.
+> Among them, $tts$ represents the evaluation results of the speech synthesized using a pre-trained neutral speech model without adding any LoRA plugins or conducting any fine-tuning.
+>
+> The objective experiment indicates that $g$ performs the best, which is consistent with the findings of the subjective experiment.
+> Among them, the recognition rate for $angry$ is the highest, with more noticeable improvements observed for $happy$ and $sad$, while $surprise$ still maintains the lowest recognition rate.
+
+客观实验结果如表\ref{Obj}/所示。
+其中$tts$是没有在任何位置添加LoRA插件，也没有进行任何微调，直接用训练好的中性语音模型合成音频的评测结果。
+客观实验表明$g$的表现是最好的，这与主观实验现象保持一致。
+其中$angry$的的判别率最高，$happy$和$sad$的提升更为明显，$surprise$仍然保持着最低的判别比率。
+
+### 5.2.2.The impact of changes in r-value
+
+> The impact of the r-value on emotional performance is shown in Table \ref{rrr}.
+> $r$ represents the size of the matrix rank, where smaller values of $r$ indicate fewer parameters.
+> We selected the best-performing $g$ and conducted four experiments with $r$ values of 2, 4, 8, and 16.
+>
+> From the experimental results, we found that varying the r-value did not appear to affect emotional performance.
+> We have two hypotheses: (1) We trained LoRA separately for each emotion, and emotions contain relatively limited information, which can be learned with a small number of parameters. (2) The emotional fine-tuning data we used may not be sufficient, allowing LoRA to fully learn the emotional information with fewer parameters.
+
+r值对情感表现的影响结果如表\ref{rrr}所示。
+r代表矩阵秩的大小，越小的r值代表着更少的参数量。
+我们将表现最好的$g$拿出来，以此按$r=2,4,8,16$进行四次实验。
+
+通过实验结果我们发现，r值的变化似乎并没有对情感表现造成影响。
+我们有两种猜测：（1）我们为每种情感单独训练LoRA，情感信息所包含的知识相对较少，用很少的参数量就可以学习到。（2）我们使用的情感微调数据不够多，因此LoRA用低参数就可以完全学会这些数据的情感信息。
+
 ## 6.Conclusions: 结论
 
 In this paper, we introduced the EELE method, using LoRA to enable neutral TTS models to generate emotional speech without requiring emotion-specific training. This plug-and-play solution proved effective, creating a flexible, scalable emotional TTS system. Evaluations confirmed its ability to enhance emotional expression, with applications in movies, games, and voice acting. The EELE method advances adaptable emotional TTS systems, contributing to AI-generated content, with future work focusing on refining LoRA integration and broadening emotional expression.
